Added sketch of a mechanism for uploading Excel.